tests/golden/type_errors/module_duplicate_export_deps/b.cd
let value = 2;
export value;
